--- a/www/templates/ambiguous-login.html
+++ b/www/templates/ambiguous-login.html
@@ -8,10 +8,8 @@
       <div class="padding">
         <p>There were multiple matches for that email address. Please choose the specific user you would like to log in as.</p>
       </div>
-      <label ng-repeat="item in items" class="item item-text-wrap" ng-click='validateSingle(item)'>
-        <div class="fancy-select-icon" ng-if="item.icon != null">
-          <i class="icon-{{item.text}}" style="background-image: url({{item.icon}})"></i>
-        </div>
+      <label ng-repeat="item in items" class="item item-text-wrap item-icon-left" ng-click='validateSingle(item)'>
+        <i class="icon ion-person"></i>
         {{item.text}}
       </label>
     </div>
