--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -9,7 +9,7 @@
       </div>
       <div class="list">
         <label class="item item-input">
-          <input type="text" placeholder="Email" ng-model="data.email">
+          <input type="email" placeholder="Email" ng-model="data.email">
         </label>
         <label class="item item-input">
           <input type="password" placeholder="Password" ng-model="data.password">
