--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -23,12 +23,17 @@
         <div class="row" style="padding: 0; text-align: center;">
           <div class="col">
             <button class="tab-item button button-clear" ng-click="gallery()">
-              <i class="icon ion-images tropic"></i>
+              <i class="icon ion-images dark"></i>
             </button></div>
           <div class="col">
             <button class="tab-item button button-clear" ng-click="camera()">
-              <i class="icon ion-camera tropic"></i>
+              <i class="icon ion-camera dark"></i>
             </button></div>
+        </div>
+        <div class="attachments" ng-show="attachments.length > 0">
+          <div class="attachment" ng-repeat="attachment in attachments">
+            <i class="icon ion-image"></i> {{ attachment.filename }} <i ng-click="deleteAttachment($index)" class="icon ion-close dark"></i>
+          </div>
         </div>
         <fancy-select header-text="Choose a Project" label="Project" allow-empty="true" value="case.ixProject" text="case.sProject.__cdata" items="projects" callback="projectUpdated(val)"></fancy-select>
         <fancy-select header-text="Choose an Area" label="Area" allow-empty="true" value="case.ixArea" text="case.sArea.__cdata" items="areas"></fancy-select>
@@ -38,7 +43,7 @@
         <fancy-select header-text="Choose a Priority" label="Priority" allow-empty="true" value="case.ixPriority" text="case.sPriority.__cdata" items="priorities"></fancy-select>
         <label class="item item-stacked-label tag-box">
           <span class="input-label subdued">Tags</span>
-          <tags-input ng-model="case.tags" replace-spaces-with-dashes="false" display-property="__cdata" placeholder="+"></tags-input>
+          <tags-input ng-model="case.tags" replace-spaces-with-dashes="false" display-property="__cdata" placeholder="+" min-length="1"></tags-input>
         </label>
       </div>
     </div>
