--- a/www/templates/cases.html
+++ b/www/templates/cases.html
@@ -22,10 +22,10 @@
         </div>
       </a>
       <div class="list-footer" ng-show="cases.length > 0">
-        <div class="short" ng-hide="count > 25 && cases.length < count">
+        <div class="short" ng-hide="count > max && cases.length < count">
           {{ cases.length }} of {{ count }}
         </div>
-        <button class="button button-clear short" ng-click="showAll()" ng-show="count > 25 && cases.length < count">
+        <button class="button button-clear short" ng-click="showAll()" ng-show="count > max && cases.length < count">
           {{ cases.length }} of {{ count }} (tap for all)
         </button>
       </div>
