--- a/www/css/style.css
+++ b/www/css/style.css
@@ -419,7 +419,6 @@ div.attachments {
   padding: 10px;
   padding-top: 0;
 }
-
 div.attachment {
   font-size: 12px;
   background-color: #BDC3C7;
@@ -432,9 +431,42 @@ div.attachment {
   width: auto;
   color: #fff;
 }
-div.attachment i
-{
+div.attachment i {
   display: inline !important;
   margin-left: 5px;
   width: 50px;
+}
+.transparent {
+  background: transparent !important;
+}
+.image-modal {
+  width: 100% !important;
+  height: 100%;
+  top: 0 !important;
+  left: 0 !important;
+}
+.fullscreen-image {
+  max-width: 100%;
+  max-height: 100%;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  overflow: auto;
+  position: fixed;
+  right: 0;
+  top: 0;
+}
+
+/* Fix modal backdrop for smaller devices */
+
+@media (max-width: 679px) {
+  .active .modal-backdrop-bg {
+    opacity: .5;
+  }
+  .modal-backdrop-bg {
+    -webkit-transition: opacity 300ms ease-in-out;
+    transition: opacity 300ms ease-in-out;
+    background-color: #000;
+    opacity: 0;
+  }
 }
