--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -20,34 +20,27 @@
         <label class="item item-input">
           <textarea msd-elastic="\n\n" id="event" name="event" ng-model="case.newEvent" placeholder="Add a case note..."></textarea>
         </label>
-        <label ng-show="attachments.length > 0" class="item">
-          <span ng-repeat="attachment in attachments"><a href="#">{{ attachment.name }}</a></span><br/>
-        </label>
         <div class="row" style="padding: 0; text-align: center;">
           <div class="col">
           </div>
           <div class="col">
             <button class="tab-item button button-clear" ng-click="gallery()">
               <i class="icon ion-images dark"></i>
-            </button></div>
-            <div class="col">
-            </div>
-          <div class="col">
-            <button class="tab-item button button-clear" ng-click="camera()">
-<<<<<<< Updated upstream
-              <i class="icon ion-camera dark"></i>
-            </button></div>
-=======
-              <i class="icon ion-camera tropic"></i>
             </button>
           </div>
           <div class="col">
           </div>
->>>>>>> Stashed changes
+          <div class="col">
+            <button class="tab-item button button-clear" ng-click="camera()">
+              <i class="icon ion-camera dark"></i>
+            </button>
+          </div>
+          <div class="col">
+          </div>
         </div>
         <div class="attachments" ng-show="attachments.length > 0">
           <div class="attachment" ng-repeat="attachment in attachments">
-            <i class="icon ion-image"></i> {{ attachment.filename }} <i ng-click="deleteAttachment($index)" class="icon ion-close dark"></i>
+            <i class="icon ion-image"></i> <span ng-click="showAttachment()">{{ attachment.name }}</span> <i ng-click="deleteAttachment($index)" class="icon ion-close dark"></i>
           </div>
         </div>
         <fancy-select header-text="Choose a Project" label="Project" allow-empty="true" value="case.ixProject" text="case.sProject.__cdata" items="projects" callback="projectUpdated(val)"></fancy-select>
