--- a/www/templates/image-modal.html
+++ b/www/templates/image-modal.html
@@ -1,4 +1,4 @@
-<div class="modal image-modal transparent" ng-click="closeModal()">
+<div class="modal image-modal transparent" ng-click="hideAttachments()">
   <ion-pane class="transparent">
     <img ng-src="{{imageSrc}}" class="fullscreen-image" />
   </ion-pane>
