Started working image save code

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,7 +18,7 @@
       <ion-list>
         <div class="item item-input-inset">
           <label class="item-input-wrapper">
-            <input type="text" placeholder="Search" name="search" ng-model="s.searchString">
+            <input type="search" placeholder="Search" name="search" ng-model="s.searchString">
           </label>
           <button class="button button-small" ng-click="search()">
             Submit
