Added tags and attachments to the views

--- a/www/templates/close.html
+++ b/www/templates/close.html
@@ -26,10 +26,10 @@
         </label>
         <label class="item tabs tabs-secondary tabs-icon-left">
           <button class="tab-item button button-clear" ng-click="gallery()">
-            <i class="icon ion-images tropic"></i>
+            <i class="icon ion-images dark"></i>
           </button>
           <button class="tab-item button button-clear" ng-click="camera()">
-            <i class="icon ion-camera tropic"></i>
+            <i class="icon ion-camera dark"></i>
           </button>
         </label>
       </div>
