--- a/www/templates/close.html
+++ b/www/templates/close.html
@@ -8,8 +8,7 @@
       <button type="button" class="button button-clear" ng-click="save('close')">Close Case</button>
     </div>
   </ion-header-bar>
-  <ion-content scroll="true">
-    <div class="card">
+  <ion-content scroll="true">k
       <div class="list">
         <label class="item item-divider">
           {{ label }}
@@ -33,6 +32,5 @@
           </button>
         </label>
       </div>
-    </div>
   </ion-content>
 </ion-modal-view>
