--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -47,22 +47,22 @@
         <div class="col col-33 subdued">Status</div>
         <div class="col text">{{ case.sStatus.__cdata }}</div>
       </div>
-      <div class="row" ng-show="case.tags.length > 0">
+      <div class="row" ng-show="case.tagList.length > 0">
         <div class="col col-33 subdued">Tags</div>
         <div class="col text item-text-wrap">
-          <span class="tag" ng-repeat="tag in case.tags" ng-click="quickSearch('tag:&quot;' + tag.__cdata+ '&quot;')">{{ tag.__cdata }}</span>
+          <span class="tag" ng-repeat="tag in case.tagList" ng-click="quickSearch('tag:&quot;' + tag.__cdata+ '&quot;')">{{ tag.__cdata }}</span>
         </div>
       </div>
     </div>
-    <span ng-repeat="event in case.events.event">
+    <span ng-repeat="event in case.events.event track by event.ixBugEvent">
       <div class="item item-divider">
         <h3 ng-bind-html="event.evtDescription.__cdata" </h3>
-          <h4 class="subdued">{{ event.dt | date:'MM/dd/yyyy h:mma'}}</h4>
-          <h4 style="white-space: pre-wrap; font-weight: normal;">{{ event.sChanges.__cdata }}</h4>
+          <h4 class="subdued">{{:: event.dt | date:'MM/dd/yyyy h:mma'}}</h4>
+          <h4 style="white-space: pre-wrap; font-weight: normal;">{{:: event.sChanges.__cdata }}</h4>
       </div>
       <span ng-show="event.s != ''">
-        <div ng-show="event.fEmail == 'false'" class="item item-text-wrap html" ng-bind-html="event.sHtml.__cdata | hrefToJS"></div>
-        <div ng-show="event.fEmail == 'true'" class="item item-text-wrap html" ng-bind-html="event.sBodyHTML.__cdata | hrefToJS"></div>
+        <div ng-show="event.fEmail == 'false'" class="item item-text-wrap html" ng-bind-html="::event.sHtml.__cdata | hrefToJS"></div>
+        <div ng-show="event.fEmail == 'true'" class="item item-text-wrap html" ng-bind-html="::event.sBodyHTML.__cdata | hrefToJS"></div>
       </span>
       <div class="item" ng-show="event.attachments.length > 0">
         <div class="attachment" ng-repeat="attachment in event.attachments">
