--- a/www/templates/reopen.html
+++ b/www/templates/reopen.html
@@ -50,7 +50,7 @@
         <fancy-select header-text="Choose a Priority" label="Priority" allow-empty="true" value="case.ixPriority" text="case.sPriority.__cdata" items="priorities"></fancy-select>
         <label class="item item-stacked-label tag-box">
           <span class="input-label subdued">Tags</span>
-          <tags-input ng-model="case.tags" replace-spaces-with-dashes="false" display-property="__cdata" placeholder="+" min-length="1"></tags-input>
+          <tags-input ng-model="case.tagList" replace-spaces-with-dashes="false" display-property="__cdata" placeholder="+" min-length="1"></tags-input>
         </label>
       </div>
   </ion-content>
