--- a/www/templates/cases.html
+++ b/www/templates/cases.html
@@ -26,7 +26,7 @@
           {{ cases.length }} of {{ count }}
         </div>
         <button class="button button-clear short" ng-click="showAll()" ng-show="count > max && cases.length < count">
-          {{ cases.length }} of {{ count }} (tap for all)
+          {{ cases.length }} of <span ng-show="count == 250">over </span> {{ count }} (tap for all)
         </button>
       </div>
     </div>
