--- a/www/templates/close.html
+++ b/www/templates/close.html
@@ -8,7 +8,7 @@
       <button type="button" class="button button-clear" ng-click="save('close')">Close Case</button>
     </div>
   </ion-header-bar>
-  <ion-content scroll="true">k
+  <ion-content scroll="true">
       <div class="list">
         <label class="item item-divider">
           {{ label }}
