--- a/www/css/style.css
+++ b/www/css/style.css
@@ -84,7 +84,7 @@ button.button-icon.round-overlay-button {
   border: none;
   background-color: #ffc900;
   color: white;
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26) !important;
   transition: all linear 220ms;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
@@ -257,9 +257,9 @@ ion-popover-view.fit ion-content {
   font-size: 14px !important;
 }
 .list-footer {
-  padding: 10px;
   text-align: center !important;
   color: #909090;
+  margin-top: -4px;
 }
 .list-footer a {
   text-decoration: none;
