--- a/www/templates/fancy-select-items.html
+++ b/www/templates/fancy-select-items.html
@@ -5,7 +5,7 @@
   </ion-header-bar>
   <ion-content>
     <div class="list">
-      <label ng-repeat="item in items" class="item item-text-wrap" ng-click='validateSingle(item)'>
+      <label collection-repeat="item in items" class="item item-text-wrap" ng-click='validateSingle(item)'>
         <div class="fancy-select-icon" ng-if="item.icon != null">
           <i class="icon-{{ item.text }}" style="background-image: url({{ item.icon }})"></i>
         </div>
